# goblin

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/actions/fetch-nip44/: action.yml
.github/actions/fetch-nym/: action.yml
.github/workflows/: build.yml  release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/mw/gri/android/: BackgroundService.java  MainActivity.java
android/app/src/main/res/values/: ic_launcher_background.xml
docs/: GRIM-DEVIATIONS.md  TRANSACTIONS.md
examples/: avatar_ring.rs  tunnel_measure.rs
linux/: build_release.sh
linux/Goblin.AppDir/: .DirIcon  goblin.desktop
locales/: de.yml  en.yml  es.yml  fr.yml  ja.yml  ko.yml  ru.yml  tr.yml  zh-CN.yml  zh-TW.yml
macos/: build_release.sh
macos/Goblin.app/Contents/: Info.plist
macos/Goblin.app/Contents/Resources/: AppIcon.icns
scripts/: android.sh  gen_icons.sh  make-icns.py  nym-android.sh  toolchain.sh
src/: lib.rs  logger.rs  main.rs
src/gui/: app.rs  colors.rs  mod.rs  theme.rs
src/gui/platform/: mod.rs
src/gui/platform/android/: mod.rs
src/gui/platform/desktop/: mod.rs
src/gui/views/: camera.rs  content.rs  mod.rs  qr.rs  views.rs
src/gui/views/goblin/: activity.rs  avatars.rs  data.rs  format.rs  helpers.rs  home.rs  identicon.rs  identities.rs  me.rs  mod.rs  modals.rs  onboarding.rs  pay.rs  privacy.rs  profile.rs  prompts.rs  receipt.rs  receive.rs  send.rs  settings.rs  settings_advanced.rs  settings_node.rs  username.rs  widgets.rs
src/gui/views/input/: edit.rs
src/gui/views/network/: content.rs
src/gui/views/settings/: content.rs  mod.rs
src/gui/views/wallets/: content.rs  mod.rs
src/gui/views/wallets/creation/: content.rs  mnemonic.rs
src/gui/views/wallets/modals/: changelog.rs
src/gui/views/wallets/wallet/: content.rs  mod.rs
src/gui/views/wallets/wallet/request/: send.rs
src/gui/views/wallets/wallet/txs/: content.rs  tx.rs
src/http/: client.rs  mod.rs  price.rs  release.rs
src/node/: node.rs
src/nostr/: authuri.rs  avatar.rs  client.rs  config.rs  identities.rs  identity.rs  ingest.rs  loginuri.rs  mod.rs  nip05.rs  payuri.rs  pool.rs  protocol.rs  relays.rs  sanitize.rs  session.rs  store.rs  trusturi.rs  types.rs  wrapv3.rs
src/nostr/client/: identity.rs  mod.rs  send.rs  service.rs  sessions.rs
src/nostr/session/: classify.rs  mod.rs  sign.rs
src/nym/: dns.rs  mod.rs  nymproc.rs  sidecar.rs  streamexit.rs  transport.rs
src/settings/: config.rs  settings.rs
src/tor/: engine.rs  mod.rs  tor.rs  transport.rs
src/wallet/: config.rs  e2e.rs  mod.rs  proof_addrs.rs  seed.rs  store.rs  types.rs  wallet.rs
src/wallet/connections/: external.rs
tests/: connect_timing.rs  i18n_keys.rs  nostr_e2e.rs  replay_check.rs  xrelay_smoke.rs
wix/: main.wxs
